--- a/WebContent/NewFile.html
+++ b/WebContent/NewFile.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 <p id="demo"></p>
-<textarea id="messages" rows="10" cols="55"></textarea>
-<input id="message" type="text" size="50" />
-<input type="button" value="send" onclick="send()" />
+<textarea id="messages" rows="10" cols="55"></textarea><br>
+Message <input id="message" type="text" size="50" />
+<input type="button" value="send to all" onclick="sendToAll()" /><br>
+Name of reciever<input type ="text" size="30" id="reciever" />
+<input type="button" value="send to one person" onclick="send()" />
 
 <script type="text/javascript">
 var webSocket = new WebSocket('ws://localhost:8089/WebSocket/chatServerEndpoint');
@@ -18,9 +20,17 @@ webSocket.onmessage= function processMessage(chatMessage){
 	
 }
 
-function send(){
+function sendToAll(){
 	var message  = document.getElementById('message');
 	var myJson =  JSON.stringify({'message' : message.value});
+	document.getElementById("demo").innerHTML = myJson;
+	webSocket.send(myJson);
+	message.value = "";	
+}
+function send(){
+	var message  = document.getElementById('message');
+	var reciever  = document.getElementById('reciever');
+	var myJson =  JSON.stringify({'message' : message.value,'reciever':reciever.value});
 	document.getElementById("demo").innerHTML = myJson;
 	webSocket.send(myJson);
 	message.value = "";	
